<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.asel.ej17spinnermail.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="5dp"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduccion"
        android:id="@+id/textViewIntroduccion"
        android:layout_margin="2dp"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNombre"
        android:hint="@string/hintNombre"
        android:background="@drawable/fondo"
        android:layout_margin="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/hintEmail"
        android:background="@drawable/fondo"
        android:layout_margin="2dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:background="@drawable/fondo"
        android:layout_margin="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextFeedback"
        android:hint="@string/hintFeedback"
        android:layout_weight="0.30"
        android:gravity="top"
        android:background="@drawable/fondo"
        android:layout_margin="2dp"/>

    <CheckBox
        android:text="@string/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:background="@drawable/fondo"
        android:layout_margin="2dp"/>

    <Button
        android:text="@string/boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@drawable/fondo"
        android:layout_margin="2dp"/>

</LinearLayout>
